--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
 body {
-    font-family: Arial, sans-serif;
+    background-color: #ffcccc;
 }
 
 h2 {
-    color: black;
-    font-size: 35px;
-    font-weight: bold;
+    color: #e17055;
+    font-size: 49px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
-td, th {
-    border: 2px solid #000;
+p {
+    color: #d63031;
     font-size: 28px;
-    padding: 10 px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+img {
+    width: 300px;
 }
